<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2023 European Commission
  ~
  ~ Licensed under the EUPL, Version 1.2 or - as soon they will be approved by the European
  ~ Commission - subsequent versions of the EUPL (the "Licence"); You may not use this work
  ~ except in compliance with the Licence.
  ~
  ~ You may obtain a copy of the Licence at:
  ~ https://joinup.ec.europa.eu/software/page/eupl
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under
  ~ the Licence is distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF
  ~ ANY KIND, either express or implied. See the Licence for the specific language
  ~ governing permissions and limitations under the Licence.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="eu.europa.ec.eudi.wallet.ui.wallet.WalletViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".wallet.WalletFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_documents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:visibleGone="@{!viewModel.noDocuments}"
            tools:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="2dp"
            tools:visibility="visible"
            app:visibleGone="@{viewModel.noDocuments}">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_by_adding_sample_documents"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadlineMedium"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddSampleDocuments"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add_sample_documents"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:enableDisable="@{!viewModel.isLoading}"
                    app:cornerRadius="4dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnIssueUtopiaPid"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/issue_utopia_pid"
                    android:textAlignment="center"
                    app:cornerRadius="4dp"
                    app:enableDisable="@{!viewModel.isLoading}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnIssueEidasPid"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/issue_eidas_pid"
                    android:textAlignment="center"
                    app:cornerRadius="4dp"
                    app:enableDisable="@{!viewModel.isLoading}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnIssuePortugalPid"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/issue_portugal_pid"
                    android:textAlignment="center"
                    app:cornerRadius="4dp"
                    app:enableDisable="@{!viewModel.isLoading}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_empty_view"
            app:layout_constraintVertical_bias="0.3"
            app:visibleGone="@{viewModel.isLoading}"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_margin="8dp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:enableDisable="@{!viewModel.isLoading}"
            app:visibleGone="@{!viewModel.noDocuments}"
            app:cornerRadius="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>