<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2023 European Commission
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".permissions.BlePermissionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/actionBtnLayout">

            <TextView style="?android:textAppearanceLarge"
                android:id="@+id/title"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/ble_permissions"/>

            <TextView
                android:id="@+id/description"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/app_requires_bluetooth_to_be_enabled_for_offline_data_transfer_please_accept_the_requested_permissions"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enableBluetoothBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeColor="?attr/colorPrimary"
                app:rippleColor="?attr/colorPrimary"
                android:textColor="?attr/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/enable_ble" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enableBluetoothPermissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeColor="?attr/colorPrimary"
                app:rippleColor="?attr/colorPrimary"
                android:textColor="?attr/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/enableBluetoothBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/enable_ble_permissions"
                android:visibility="visible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enableLocationProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeColor="?attr/colorPrimary"
                app:rippleColor="?attr/colorPrimary"
                android:textColor="?attr/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/enableBluetoothPermissions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/enable_location_provider"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                app:strokeColor="?attr/colorPrimary"
                app:rippleColor="?attr/colorPrimary"
                android:textColor="?attr/colorPrimary"
                android:text="@android:string/yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/skipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:strokeColor="?attr/colorPrimary"
                app:rippleColor="?attr/colorPrimary"
                android:textColor="?attr/colorPrimary"
                android:text="@android:string/no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>